# advent-of-code

./: .gitignore  __main__.py  day_01.py  day_02.py  day_05.py  day_1.py  day_10.py  day_12.py  day_13.py  day_15.py  day_16.py  day_17.py  day_18.py  day_2.py  day_20.py  day_21.py  day_22.py  day_24.py  day_25.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py  day_8.py  day_9.py  pyproject.toml  utils.py
2023/: README.md  day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_16.py  day_17.py  day_18.py
2024/: day_03.py  day_07.py  day_08.py  day_11.py  day_12.py  day_14.py  day_15.py  day_16.py  day_18.py  day_19.py  day_20.py  day_21.py  day_22.py  day_23.py
2025/: README.md  day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py
aoc/: __main__.py  utils.py
test/: __init__.py  test_day_10.py  test_day_11.py  test_day_12.py  test_day_13.py  test_day_15.py  test_day_16.py  test_day_17.py  test_day_18.py  test_day_19.py  test_day_20.py  test_day_21.py  test_day_22.py  test_day_23.py  test_day_24.py  test_day_25.py  test_day_5.py  test_day_6.py  test_day_7.py  test_day_8.py  test_day_9.py
